# chief-elite

./: README.md  add_sample_stock.py  add_services.py  admin_routes.py  app.py  create_admin.py  create_settings.py  fix_postgres_compatibility.py  forms.py  main.py  models.py  pyproject.toml  remove_services.py  routes.py  setup_instructions.md  setup_services.py  utils.py
static/css/: custom.css
static/js/: admin.js  chat.js  main.js  stock.js
templates/: 404.html  500.html  accounts.html  base.html  chat.html  create_post.html  dashboard.html  fund_request.html  login.html  other_orders.html  post_detail.html  posts.html  profile.html  stock.html
templates/admin/: base.html  category_edit.html  create_invoice.html  create_post.html  dashboard.html  fund_requests.html  import_stock.html  invoice.html  invoices.html  other_order_type_edit.html  other_order_types.html  other_orders.html  other_orders_status.html  post_edit.html  posts.html  price_list.html  process_fund.html  reports.html  service_edit.html  settings.html  stock.html  stock_item_edit.html  support.html  user_edit.html  users.html
templates/admin/reports/: total_sales.html
